Fixing overflow on small devices with pure-g-gutter

--- a/sass/layout/_layout.sass
+++ b/sass/layout/_layout.sass
@@ -13,6 +13,7 @@
 
 .wrapper
     margin: 0 auto
+    overflow-x: hidden
     +l-wrapper-width()
 
 .content
